# agui-demo

./: .gitignore
agent/: agent.py  langgraph_server.py  pyproject.toml
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: prompts.ts
frontend/src/app/Components/: AGUI.tsx
