[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "orca-copilotkit",email = "testapp@copilotkit.ai"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "copilotkit (>=0.1.45,<0.2.0)",
    "langchain-core (>=0.3.59,<0.4.0)",
    "langgraph (>=0.4.3,<0.5.0)",
    "langchain-openai (>=0.3.16,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tavily-python (>=0.7.2,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
langgraph_server = "langgraph_server:main"